# confluence-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  pyproject.toml  setup.py
.cursor/: mcp.json
src/: main.py  version.py
src/common/: config.py  connection.py  logging_utils.py  server.py
src/tools/: comments.py  content.py  format_converter.py  space.py
src/tools/converters/: __init__.py  drawio_handler.py  markdown_to_storage.py  mermaid_handler.py  storage_to_markdown.py
tests/: conftest.py  sample_data.py  test_comments_tools.py  test_connection.py  test_content_tools.py  test_converters.py  test_format_converter.py  test_handlers.py  test_space_tools.py
