[project]
name = "confluence-mcp-server"
version = "0.1.0"
description = "Confluence MCP Server - Model Context Protocol server for Confluence"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
keywords = ["confluence", "mcp", "model-context-protocol", "ai", "llm", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
]
dependencies = [
    "mcp>=1.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "click>=8.0.0",
]

[project.scripts]
confluence-mcp-server = "src.main:cli"

[project.urls]
Homepage = "https://github.com/example/confluence-mcp-server"
Repository = "https://github.com/example/confluence-mcp-server"
Issues = "https://github.com/example/confluence-mcp-server/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]